# ai-investor

./: .env.example  .gitignore  CHANGELOG_LONGTERM_STRATEGY.md  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml
data/: portfolio.json  shortlist.json
docs/: advice_investor.md  architecture.md  getting_started.md  investment_strategy.md  mcp_tools.md  overview.md  runbook.md  setup.md  tools.md
src/ai_investor/: __init__.py  config.py  data_access.py  models.py  runner.py  server.py
src/ai_investor/agents/: agent_orchestrator.py  claude_agent.py  mcp_tools.py
src/ai_investor/analysis/: __init__.py  models.py  scoring.py
src/ai_investor/approvals/: cli_gate.py
src/ai_investor/broker/: nordnet_client.py
src/ai_investor/data/: __init__.py  eodhd.py  nordnet.py
src/ai_investor/data_providers/: eodhd_client.py
src/ai_investor/decision/: engine.py  models.py
src/ai_investor/integrations/: __init__.py  eodhd.py  fear_greed.py  tiingo.py
src/ai_investor/logging/: decision_log.py
src/ai_investor/orchestration/: service.py
src/ai_investor/portfolio/: __init__.py  manager.py
src/ai_investor/reporting/: __init__.py  email.py
src/ai_investor/services/: advice.py  portfolio.py  screener.py
src/ai_investor/shortlist/: pipeline.py
src/ai_investor/strategy/: __init__.py  core.py
src/ai_investor/tooling/: tools.py
src/ai_investor/utils/: emailer.py
strategy/: minimise_risk_long_term.md
tests/: test_agent_orchestrator.py  test_mcp_tools.py  test_nordnet_client.py
