[project]
name = "ai-investor"
version = "0.1.0"
description = "AI-driven investment agent integrating market data, portfolio holdings, and strategy-driven recommendations."
authors = [{ name = "Patrick Alfei Sæbø" }]
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.30.0",
    "pydantic>=2.6.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"
