[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-investor"
version = "0.1.0"
description = "MCP server that provides portfolio insights and investment advice."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "AI Investor Team" }
]
dependencies = [
    "httpx>=0.27.0",
    "mcp[cli]>=0.3.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.1",
    "yfinance>=0.2.50",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0"
]

[project.scripts]
ai-investor-server = "ai_investor.server:run"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ai_investor*"]
